--- a/packages/smith-app/src/index.css
+++ b/packages/smith-app/src/index.css
@@ -3,7 +3,8 @@ html {
   color-scheme: light dark;
 }
 
-body {
+body,
+input {
   font-family: system-ui;
   font-size: 1.25rem;
   line-height: 1.5;
